# Extensible-VNC

./: README.md
Apache24/: LICENSE.txt
Apache24/conf/: httpd.conf
Apache24/conf/original/: httpd.conf
Apache24/htdocs/: index.html  start.html
Apache24/include/: httpd.h
Apache24/lib/: .chksum  apr-1.lib  aprutil-1.lib  libapr-1.exp  libapr-1.lib  libapriconv-1.exp  libapriconv-1.lib  libaprutil-1.exp  libaprutil-1.lib  libhttpd.exp  libhttpd.lib  mod_dav.exp  mod_dav.lib  xml.lib
php/: pharcommand.phar  php7embed.lib  snapshot.txt
php/dev/: php7.lib
vncsdk-1.7.0/: LICENSE.txt  StartHere.html
vncsdk-1.7.0/docs/: index.html  objects.inv  overview.html  release-notes.html  search.html  searchindex.js
vncsdk-1.7.0/docs/_sources/: index.txt  overview.txt  release-notes.txt
vncsdk-1.7.0/docs/_sources/api/: index.txt
vncsdk-1.7.0/docs/_sources/legal/: acknowledgements.txt  foss.txt  index.txt
vncsdk-1.7.0/docs/_static/css/: app.css  pygments.css
vncsdk-1.7.0/docs/_static/js/: developer.js  sphinx.js
vncsdk-1.7.0/docs/api/: index.html
vncsdk-1.7.0/docs/api/c/: AddOn.h.html  Annotation.h.html  Cloud.h.html  Common.h.html  DataBuffer.h.html  DataStore.h.html  DirectTcp.h.html  Displays.h.html  Errors.h.html  EventLoop.h.html  EventLoopFd.h.html  EventLoopWin.h.html  Init.h.html  Keyboard.h.html  Logger.h.html  Messaging.h.html  PixelFormat.h.html  RsaKey.h.html  Server.h.html  Version.h.html  Viewer.h.html  Vnc.h.html  index.html
vncsdk-1.7.0/docs/api/cloud/: index.html
vncsdk-1.7.0/docs/legal/: acknowledgements.html  foss.html  index.html
vncsdk-1.7.0/include/vnc/: Cloud.h  Common.h  DirectTcp.h  Errors.h  EventLoop.h  EventLoopFd.h  EventLoopWin.h  Keyboard.h  Messaging.h  RsaKey.h  Version.h  Viewer.h
vncsdk-1.7.0/lib/linux-armhf-raspi/: libvncsdk.so.1.7  vncagent  vncannotator
vncsdk-1.7.0/lib/linux-x64/: vncagent  vncannotator
vncsdk-1.7.0/lib/linux-x86/: vncagent  vncannotator
vncsdk-1.7.0/lib/mac-x64/: vncagent  vncannotator
vncsdk-1.7.0/lib/python/: vncsdk.py
vncsdk-1.7.0/lib/win-x64/: vncsdk.lib
vncsdk-1.7.0/lib/win-x86/: vncsdk.lib
vncsdk-1.7.0/samples/basicServer/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Makefile  README-MAC.txt  README-WIN.txt  README-X11.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basicServer.cxx  basicServer.sln  basicServer.vcxproj  basicServer.vcxproj.filters  cmake_install.cmake
vncsdk-1.7.0/samples/basicServer/Debug/: basicServer.ilk  fileStore.txt
vncsdk-1.7.0/samples/basicServer/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
vncsdk-1.7.0/samples/basicServer/basicServer.dir/Debug/basicServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vncsdk-1.7.0/samples/basicServerAndroid/: README.txt  build.gradle  gradle.properties  settings.gradle
vncsdk-1.7.0/samples/basicServerPython/: README.txt  basicServerPython.py
vncsdk-1.7.0/samples/basicViewerAndroid/: LICENSE.txt  README.txt  gradle.properties
vncsdk-1.7.0/samples/basicViewerCSharpWpf/: App.xaml  App.xaml.cs  BasicViewerCSharpWpf.csproj  BasicViewerCSharpWpf.sln  ConnectSettings.cs  ConnectSettingsWindow.xaml  ConnectSettingsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.txt  ViewerControl.Designer.cs  ViewerControl.cs  VncKeyMapper.cs  VncLibraryThread.cs  VncViewerSession.cs  VncWinformEventMap.cs
vncsdk-1.7.0/samples/basicViewerHTML5/: README.txt  viewer.css  viewer.html  viewer.js
vncsdk-1.7.0/samples/basicViewerMac/: AppDelegate.h  AppDelegate.mm  BasicViewerView.h  BasicViewerView.mm  CMakeLists.txt  Info.plist  README.txt  main.mm
vncsdk-1.7.0/samples/basicViewerPython/: README.txt  basicViewerPython.py
vncsdk-1.7.0/samples/basicViewerWin/: BasicViewerWindow.cxx  BasicViewerWindow.h  CMakeLists.txt  README.txt  main.cxx
vncsdk-1.7.0/samples/basicViewerX11/: BasicViewerWindow.cxx  BasicViewerWindow.h  CMakeLists.txt  README.txt  main.cxx
vncsdk-1.7.0/samples/basicVieweriOS/: README.txt
vncsdk-1.7.0/samples/common/: common.cmake
vncsdk-1.7.0/samples/richServerPython/: Connection.py  ConnectionDetail.py  README.txt  RPCFunctions.py  RPCHandler.py  SDKThread.py  ServerCallbacks.py  richServerPython.py
vncsdk-1.7.0/samples/richViewerPython/: ConnectDialog.py  ConnectionDetail.py  CredentialDialog.py  MainWindow.py  Mappings.py  PeerVerificationDialog.py  PreferencesDialog.py  README.txt  RPCFunctions.py  SDKThread.py  ViewerCallbacks.py  ViewerCanvas.py  main.py
vncsdk-1.7.0/samples/serviceServerLinux/: CMakeLists.txt  README.txt  SignalHandler.cxx  SignalHandler.h  serviceServerLinux.cxx
vncsdk-1.7.0/samples/serviceServerMac/: CMakeLists.txt  README.txt  SignalHandler.cxx  SignalHandler.h  com.realvnc.serviceServerMac.peruser.plist  com.realvnc.serviceServerMac.plist  com.realvnc.serviceServerMac.prelogin.plist  serviceServerMac.cxx
vncsdk-1.7.0/samples/serviceServerWin/: CMakeLists.txt  README.txt  serviceServerWin.cxx
vncsdk-1.7.0/tools/vnccloudaddresstool/: README.txt  app.db  app.py  datastore.py  requirements.txt  run.cmd  run.py  run.sh  vnccloud.py
(+617 files in other folders)
